[package]
name = "frost-blueprint"
version = "0.2.0"
edition = "2021"
description = "FROST Blueprint built using Tangle Blueprint SDK"
authors = ["Webb Technologies Inc."]
license = "Unlicense"

[lib]
path = "src/lib.rs"

[[bin]]
name = "frost-blueprint"
path = "src/main.rs"

[dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = [
    "std",
    "tracing",
    "macros",
    "tangle",
    "networking",
    "local-store",
    "round-based-compat",
] }
crossbeam-channel = "0.5"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["sync", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
futures = "0.3"
libp2p = { version = "0.54", default-features = false }
thiserror = "2"
displaydoc = "0.2"

# FROST
frost-core = { workspace = true, default-features = false, features = ["serialization", "cheater-detection"] }
frost-ed25519 = { workspace = true, default-features = false, features = ["serialization", "cheater-detection"] }
frost-secp256k1 = { workspace = true, default-features = false, features = ["serialization", "cheater-detection"] }
blueprint-sdk = { workspace = true, features = [
    "tracing",
    "tangle",
    "networking",
    "local-store",
    "macros",
    "round-based-compat",
] }

round-based = { version = "0.4.1", features = ["runtime-tokio", "derive"] }

[dev-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tangle", "testing", "networking", "round-based-compat"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = "0.3"

[features]
default = ["std"]
std = [
    "frost-core/std",
    "frost-ed25519/std",
    "frost-secp256k1/std",
    "serde_json/std",
    "serde/std",
    "rand_chacha/std",
]
