[package]
name = "frost-blueprint"
version = "0.2.0"
edition = "2021"
description = "FROST Blueprint built using Tangle Blueprint SDK"
authors = ["Webb Technologies Inc."]
license = "Unlicense"

[lib]
path = "src/lib.rs"

[[bin]]
name = "frost-blueprint"
path = "src/main.rs"

[dependencies]
blueprint-sdk = { version = "0.2.0-alpha.8", default-features = false, features = [
    "std",
    "tracing",
    "macros",
    "tangle",
    "networking",
    "local-store",
    "round-based-compat",
] }
crossbeam-channel = "0.5"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["sync", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
rand_chacha = "0.3"
futures = "0.3"
libp2p = { version = "0.56", default-features = false }
thiserror = "2"
displaydoc = "0.2"

# FROST
frost-core = { version = "2.0", default-features = false, features = ["serialization", "cheater-detection"] }
frost-ed25519 = { version = "2.0", default-features = false, features = ["serialization", "cheater-detection"] }
frost-secp256k1 = { version = "2.0", default-features = false, features = ["serialization", "cheater-detection"] }

round-based = { version = "0.4.1", features = ["runtime-tokio", "derive"] }

[dev-dependencies]
blueprint-sdk = { version = "0.2.0-alpha.8", default-features = false, features = ["std", "tangle", "testing", "networking", "round-based-compat"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = "0.3"

[features]
default = ["std"]
std = [
    "frost-core/std",
    "frost-ed25519/std",
    "frost-secp256k1/std",
    "serde_json/std",
    "serde/std",
    "rand_chacha/std",
]
